# RPLAN

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/skills/rplan-pulse/: SKILL.md
.claude/skills/rplan-wave/: SKILL.md
.github/workflows/: ci.yml
.roles/: ROLE.md
.roles/parliament/: audit-certificate-auditor.md  consumer-boundary-reviewer.md  plan-package-steward.md
context/waves/: PHASES.md
context/waves/2026-05-15-rplan-foundation/: WAVE.md
context/waves/2026-05-15-rplan-foundation/pulses/: pulse-01.md
crates/rplan-audit/: Cargo.toml
crates/rplan-audit/fixtures/: grid3x3-disconnected-certificate.json  grid3x3-disconnected.rplan  grid3x3-missing-contiguity-certificate.json  grid3x3.rctx
crates/rplan-audit/profiles/: incomplete-state-house-profile.json  us-congressional-project-v1.json
crates/rplan-audit/src/: lib.rs
crates/rplan-cli/: Cargo.toml
crates/rplan-cli/src/: main.rs
crates/rplan-cli/tests/: audit_cli.rs
crates/rplan-core/: Cargo.toml
crates/rplan-core/src/: lib.rs
crates/rplan-io/: Cargo.toml
crates/rplan-io/src/: lib.rs
crates/rplan-io/src/fixtures/: path5.rctx
docs/examples/g-ensemble-evidence-packages/G.1-G.3+active-synthetic/: context.rctx  diagnostics.json  election-input.json  external-trace.json  manifest.json  metric-output.json  plan.rplan
docs/examples/g-ensemble-evidence-packages/G.1-G.3+missing-evidence/: manifest.json  scout-summary.json
docs/examples/g-ensemble-evidence-packages/G.6-G.12+short-burst-smoke/: manifest.json  short-burst-fixtures.json
docs/examples/j-apportionment-evidence-packages/2020-census-table01/: apportionment-table01.json  manifest.json
docs/examples/j-apportionment-evidence-packages/divisor-method-smoke/: divisor-fixtures.json  manifest.json
docs/examples/k-reock-evidence-packages/exact-mbc-smoke/: manifest.json  reock-fixtures.json
docs/examples/m-community-character-evidence-packages/M.1+economic-character-smoke/: economic-fixtures.json  manifest.json
docs/examples/m-community-character-evidence-packages/M.3+acs-housing-smoke/: manifest.json  (+1 more)
docs/examples/rcount-golden-packages/: README.md
docs/examples/rplan-benchmark-packages/: README.md
docs/examples/rplan-golden-packages/: README.md
docs/examples/rplan-method-packages/: README.md
docs/examples/u20-plan-audit-certificates/: NEGATIVE-FIXTURES.md  README.md
docs/specs/: rplan-foundation.md
(+293 files in other folders)
