[package]
name = "rplan-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Generic RPLAN district-plan domain model, context model, and canonical hashing"

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
